# utf8convert

./: README.md  pyproject.toml
.github/workflows/: publish.yml
utf8convert/: cli.py
